--- a/src/index.css
+++ b/src/index.css
@@ -69,9 +69,16 @@ html {
     background-color 0.3s ease-in-out;
 }
 
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --backgroundColor: var(--dark-mode-bg-color);
+    --textColor: var(--dark-mode-text-color);
+  }
+} */
+
 .dark-theme {
-  background: var(--dark-mode-bg-color);
-  color: var(--dark-mode-text-color);
+  --backgroundColor: var(--dark-mode-bg-color);
+  --textColor: var(--dark-mode-text-color);
 }
 
 body {
